# VCrypt

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml  _extension_deploy.yml
benchmarks/tpch/: load.benchmark  q1.benchmark
scripts/: bootstrap-template.py  set_extension_name.py  setup-custom-toolchain.sh
scripts/demo/: load_lineitem_enc.sql  load_lineitem_naive.sql  load_sf1.sql
scripts/test/: decrypt_vectorized.sql  decrypt_vectorized_batch.sql  experiments.sql
src/: CMakeLists.txt  simple_encryption_extension.cpp  simple_encryption_state.cpp  vcrypt_extension.cpp  vcrypt_state.cpp
src/core/: CMakeLists.txt  module.cpp  types.cpp
src/core/crypto/: CMakeLists.txt  crypto_primitives.cpp
src/core/functions/: CMakeLists.txt  common.cpp
src/core/utils/: CMakeLists.txt  simple_encryption_utils.cpp  vcrypt_utils.cpp
src/etype/: CMakeLists.txt  encrypted_type.hpp  etype_properties.hpp  etype_serialization.cpp  etype_serialization.hpp
src/include/: simple_encryption_extension.hpp  simple_encryption_extension_callback.hpp  simple_encryption_state.hpp  vcrypt_extension.hpp  vcrypt_extension_callback.hpp  vcrypt_state.hpp
test/: test.db
test/sql/: encrypt_column.test  encrypt_decrypt.test  generate_key.test  generate_key_batch.test  simple_encryption.test  simple_struct_encryption.test
test/sql/EType/: etype_naive.test
test/sql/compressed_execution/: gen_single_db.test  generate_database.test  in_mem_correctness.test  in_memory.test  storage_correctness.test  storage_string_corr.test  tpch_dict.test
test/sql/compression/: dict_compression.test
test/sql/encryption/: bugfix_varchar_struct.test  bulk_encryption.test  encrypt_column.test  encrypt_decrypt.test  simple_encryption.test  simple_struct_encryption.test  small_batch.test  string_encryption.test  vectorized_encryption_simple.test
(+85 files in other folders)
